fixed alignment issues on accordion line variation on mobile view and tab variation on desktop view

--- a/ui.frontend/src/main/webpack/etisalat/styles/accordion-variants.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/accordion-variants.scss
@@ -75,7 +75,8 @@
 		display: block;
 		border-bottom: 0;
 	}
-	.cmp-accordion__title {
+	.cmp-accordion {
+		&__title{
 		line-height: 1.5;
 		font-size: $font16;
 		display: inline-block;
@@ -89,6 +90,7 @@
 			padding:15px 1.5rem;
 		}
 	}
+}
 	.cmp-accordion__itemdesc {
 		line-height: 1.5;
 		font-size: $font16;
@@ -122,12 +124,15 @@
 			margin-right: 36px;
 		}
 	}
-	.cmp-accordion__button{
+	.cmp-accordion{
+	&__button{
 		border-bottom: 1px solid $light-sand-brown;
-	}
-	.cmp-accordion__button--expanded{
+	
+	&--expanded{
 		border-bottom: 1px solid $sand-white-50;
 	}
+}
+}
 	.cmp-accordion__button--expanded .cmp-accordion__icon {
 		transform: translateY(-20%) rotate(-135deg);
 		-webkit-transform: translateY(-20%) rotate(-135deg);
@@ -144,12 +149,9 @@
 	}
 	.cmp-text {
 		display: block;
-		padding-left: 1.375rem;
-		padding-right: 1.375rem;
-		padding-top: 1.5rem;
+		padding:1.5rem 1.375rem 1rem 1.375rem;
 		font-size: $font16;
 		line-height: 28px;
-		padding-bottom: 1rem;
 		color: $dark-gray;
 		@include font-family-lato();
 		margin-bottom: 0px;
@@ -178,10 +180,12 @@
 			margin-top: 45px;
 		}
 	}
-	.cmp-accordion__item {
+	.cmp-accordion{
+	&__item {
 		display: block;
 		border-bottom: 1px solid $light-sand-brown;
 	}
+}
 	.cmp-accordion__button{
 		padding: 0;
 	}
